--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     </header>
 
     <main role="main" class="row">
-      <div class="large-12 columns">
+      <div class="small-12 columns">
         <%= render 'layouts/messages' %>
         <%= yield %>
       </div>
