--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -2,3 +2,5 @@
 <p>Name: <%= @owner.name %></p>
 <p>Birthdate: <%= @owner.birthdate %></p>
 <p>Countdown: <%= @owner.countdown %></p>
+
+<p><a href="#" class="button">Button</a></p>
