static placeholder pages using high_voltage gem

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,9 +1,6 @@
 <li>
-  <%= link_to 'Item 1', root_path %>
+  <%= link_to 'About', page_path('about') %>
 </li>
 <li>
-  <%= link_to 'Item 2', root_path %>
-</li>
-<li>
-  <%= link_to 'Item 3', root_path %>
+  <%= link_to 'Contact', page_path('contact') %>
 </li>
