--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,12 @@
 <% content_for :page_title, 'Contact' %>
 
 <h3>Contact</h3>
+
+<div class="form">
+  <%= simple_form_for :contact, url: contact_path do |form| %>
+  <%= form.input :name %>
+  <%= form.input :email %>
+  <%= form.input :content, as: :text %>
+  <%= form.button :submit, 'Submit', class: 'submit' %>
+  <% end %>
+</div>
