--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,7 +3,7 @@
 <h3>Contact</h3>
 
 <div class="form">
-  <%= simple_form_for :contact, url: contact_path do |form| %>
+  <%= simple_form_for @contact do |form| %>
   <%= form.input :name %>
   <%= form.input :email %>
   <%= form.input :content, as: :text %>
