--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
       <%= render 'layouts/navigation' %>
     </header>
 
-    <main role="main" class="row">
-      <div class="small-12 columns">
+    <main role="main">
+      <div class="row">
         <%= render 'layouts/messages' %>
         <%= yield %>
       </div>
