subscribe to mailing list

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,14 +1,16 @@
 <% content_for :page_title, 'Contact' %>
 
-<div class="small-12 columns">
-  <h3>Contact</h3>
+<section>
+  <div class="columns">
+    <h3>Contact</h3>
 
-  <div class="panel">
-    <%= simple_form_for @contact do |form| %>
-    <%= form.input :name %>
-    <%= form.input :email %>
-    <%= form.input :content, as: :text %>
-    <%= form.button :submit, 'Submit', class: 'submit' %>
-    <% end %>
+    <div class="panel">
+      <%= simple_form_for @contact do |form| %>
+      <%= form.input :name %>
+      <%= form.input :email %>
+      <%= form.input :content, as: :text %>
+      <%= form.button :submit, 'Submit', class: 'submit' %>
+      <% end %>
+    </div>
   </div>
-</div>
+</section>
