--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,9 @@
-<footer class="row">
-  <div class="small-12 columns">
-    <p>Footer</p>
-  </div>
+<footer>
+  <section>
+    <div class="column">
+      <p class="right">
+        12/2013 &middot; <%= link_to 'github.com/cfleschhut/learn-rails', 'https://github.com/cfleschhut/learn-rails' %>
+      </p>
+    </div>
+  </section>
 </footer>
