--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,7 +1,7 @@
 <%# Rails flash messages styled for Zurb Foundation %>
 <% flash.each do |name, msg| %>
   <% if msg.is_a?(String) %>
-    <div class="small-12 columns">
+    <div class="row">
       <div data-alert class="alert-box radius <%= name == :notice ? "success" : "alert" %>">
         <%= content_tag :div, msg %>
         <a href="#" class="close">&times;</a>
