--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,5 @@
-<li>
-  <%= link_to 'About', page_path('about') %>
-</li>
-<li>
-  <%= link_to 'Contact', new_contact_path %>
-</li>
+<li class="divider"></li>
+<li><%= link_to 'About', page_path('about') %></li>
+<li class="divider"></li>
+<li><%= link_to 'Contact', new_contact_path %></li>
+<li class="divider"></li>
